--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.1.5+1
 
 environment:
-  sdk: ">=3.9.0 <4.0.0"
-  flutter: 3.32.8 # update `.fvmrc` config
+  sdk: ">=3.5.0 <4.0.0"  # 降低 Dart SDK 最低版本要求
+  flutter: ">=3.32.0 <3.33.0" # 限制在 3.32.x 版本
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,9 +36,9 @@ dependencies:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.6  # 降级以确保兼容性
   # 动态取色
-  dynamic_color: ^1.8.1
+  dynamic_color: ^1.7.0  # 降级
 
   # get: ^4.7.2
   get:
@@ -47,39 +47,39 @@ dependencies:
       ref: version_4.7.2
 
   # 网络
-  dio: ^5.7.0
+  dio: ^5.4.0  # 降级
   cookie_jar: ^4.0.8
-  connectivity_plus: ^7.0.0
-  dio_http2_adapter: ^2.5.3
+  connectivity_plus: ^6.0.0  # 降级
+  dio_http2_adapter: ^2.5.0  # 降级
 
   # 图片
-  cached_network_image: ^3.4.1
+  cached_network_image: ^3.3.1  # 降级
   # extended_image: ^9.0.7
-  saver_gallery: ^4.0.1
+  saver_gallery: ^3.0.5  # 降级
 
   # QRCode
   # qr_flutter: ^4.1.0
   pretty_qr_code: ^3.3.0
 
   # 存储
-  path_provider: ^2.1.5
+  path_provider: ^2.1.3  # 降级
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
   # 设备信息
-  device_info_plus: ^12.1.0
+  device_info_plus: ^10.1.0  # 降级
   # 权限
   # permission_handler: ^12.0.0+1
-  permission_handler_apple: ^9.4.7
-  permission_handler_android: ^13.0.1
-  permission_handler_platform_interface: ^4.3.0
+  permission_handler_apple: ^9.3.0  # 降级
+  permission_handler_android: ^12.0.0  # 降级
+  permission_handler_platform_interface: ^4.2.0  # 降级
   # 分享
-  share_plus: ^12.0.0
+  share_plus: ^9.0.0  # 降级
   # cookie 管理
   # webview_cookie_manager: ^2.0.6
   # 浏览器
   # webview_flutter: ^4.10.0
-  flutter_inappwebview: ^6.1.5
+  flutter_inappwebview: ^6.0.0  # 降级
   # 解决sliver滑动不同步
   # extended_nested_scroll_view: ^6.2.1
   extended_nested_scroll_view:
@@ -91,19 +91,19 @@ dependencies:
   # 下拉刷新
   # pull_to_refresh_notification: ^3.1.0
   # 图标
-  font_awesome_flutter: 10.9.0
+  font_awesome_flutter: 10.7.0  # 降级
   # material_design_icons_flutter: ^7.0.7296
   material_design_icons_flutter:
     git:
       url: https://github.com/bggRGjQaUbCoE/material_design_icons_flutter.git
       ref: const
   # toast
-  flutter_smart_dialog: ^4.9.8+5
+  flutter_smart_dialog: ^4.9.7  # 降级
   # 下滑关闭
   # dismissible_page: ^1.0.2
   # custom_sliding_segmented_control: ^1.8.4
   # 加密
-  crypto: ^3.0.6
+  crypto: ^3.0.3
   encrypt: ^5.0.3
 
   # 视频播放器
@@ -117,29 +117,29 @@ dependencies:
   media_kit_libs_video: 1.0.5
 
   # 媒体通知
-  audio_service: ^0.18.15
-  audio_session: ^0.2.2
+  audio_service: ^0.18.13  # 降级
+  audio_session: ^0.1.18  # 降级
 
   # 音量、亮度、屏幕控制
-  flutter_volume_controller: ^1.3.3
-  wakelock_plus: ^1.2.8
+  flutter_volume_controller: ^1.3.2  # 降级
+  wakelock_plus: ^1.2.5  # 降级
   # universal_platform: ^1.1.0
   auto_orientation:
     git:
       url: https://github.com/bggRGjQaUbCoE/auto_orientation.git
       ref: master
-  protobuf: ^5.0.0
+  protobuf: ^3.1.0  # 降级
   # animations: ^2.0.11
 
   # 获取appx信息
-  package_info_plus: ^9.0.0
-  url_launcher: ^6.3.1
+  package_info_plus: ^8.0.0  # 降级
+  url_launcher: ^6.2.6  # 降级
   # 防抖节流
   easy_debounce: ^2.0.3
   # 高帧率
-  flutter_displaymode: ^0.7.0
+  flutter_displaymode: ^0.6.0  # 降级
   # scheme跳转
-  app_links: ^6.3.2
+  app_links: ^6.1.0  # 降级
   # 弹幕
   # ns_danmaku:
   #   git:
@@ -165,13 +165,13 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   # 极验
   gt3_flutter_plugin: ^0.1.0
-  uuid: ^4.5.1
+  uuid: ^4.4.0  # 降级
   # scrollable_positioned_list: ^0.3.8
   # nil: ^1.1.1
   catcher_2: ^2.1.0
-  logger: ^2.5.0
+  logger: ^2.3.0  # 降级
   #瀑布流
-  waterfall_flow: ^3.1.0
+  waterfall_flow: ^3.0.3  # 降级
   #跑马灯
   # marquee: ^2.3.0
   #富文本
@@ -183,17 +183,17 @@ dependencies:
       ref: main
       path: packages/chat_bottom_container
   image_picker: ^1.1.2
-  intl: ^0.20.2
-  archive: ^4.0.0
-  flutter_svg: ^2.0.14
-  image_cropper: ^11.0.0
+  intl: ^0.19.0  # 降级
+  archive: ^3.6.0  # 降级
+  flutter_svg: ^2.0.10+1  # 降级
+  image_cropper: ^8.0.0  # 降级 - 11.0.0 可能需要较新的 Flutter 版本
   #解压直播消息
   brotli: ^0.6.0
   expandable: ^5.0.1
-  flex_seed_scheme: ^3.4.1
+  flex_seed_scheme: ^3.3.0  # 降级
   live_photo_maker: ^0.0.6
-  fl_chart: ^1.0.0
-  synchronized: ^3.3.0
+  fl_chart: ^0.69.0  # 降级
+  synchronized: ^3.1.0+1  # 降级
   # document_file_save_plus: ^2.0.0
   # webdav_client: ^1.2.2
   webdav_client:
@@ -206,15 +206,15 @@ dependencies:
       url: https://github.com/bggRGjQaUbCoE/flutter_sortable_wrap.git
       ref: master
   crclib: ^3.0.0
-  web_socket_channel: ^3.0.3
-  image: ^4.5.4
+  web_socket_channel: ^3.0.1  # 降级
+  image: ^4.2.0  # 降级
   # window_manager: ^0.5.1
   window_manager:
     git:
       url: https://github.com/bggRGjQaUbCoE/window_manager.git
       path: packages/window_manager
       ref: main
-  tray_manager: ^0.5.1
+  tray_manager: ^0.2.3  # 降级
   # file_picker: ^10.3.3
   file_picker:
     git:
@@ -244,9 +244,9 @@ dependency_overrides:
   screen_brightness_ios: ^2.1.2
   screen_brightness_android: ^2.1.3
   screen_brightness_platform_interface: ^2.1.0
-  path: ^1.9.1
-  mime: ^2.0.0
-  rxdart: ^0.28.0
+  path: ^1.9.0  # 降级
+  mime: ^1.0.6  # 降级
+  rxdart: ^0.27.7  # 降级
   media_kit:
     git:
       url: https://github.com/bggRGjQaUbCoE/media-kit.git
@@ -277,7 +277,8 @@ dependency_overrides:
       url: https://github.com/bggRGjQaUbCoE/media-kit.git
       path: libs/windows/media_kit_libs_windows_video
       ref: version_1.2.5
-  font_awesome_flutter: 10.9.0
+  font_awesome_flutter: 10.7.0  # 降级
+  intl: ^0.19.0  # 降级
 
 dev_dependencies:
   flutter_test:
@@ -288,11 +289,11 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^6.0.0
-  flutter_launcher_icons: ^0.14.4
+  flutter_lints: ^4.0.0  # 降级
+  flutter_launcher_icons: ^0.13.1  # 降级
   # hive_generator: ^2.0.1
-  build_runner: ^2.9.0
-  flutter_native_splash: ^2.4.6
+  build_runner: ^2.4.11  # 降级
+  flutter_native_splash: ^2.4.1  # 降级
 
 flutter_launcher_icons:
   android: true
