--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ version: 1.1.5+1
 
 environment:
   sdk: ">=3.5.0 <4.0.0"  # 降低 Dart SDK 最低版本要求
-  flutter: ">=3.32.0 <3.33.0" # 限制在 3.32.x 版本
+  flutter: "3.32.8" # 限制在 3.32.x 版本
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
